Added pigeon mongo driver

--- a/Pigoen/Pigoen/appsettings.json
+++ b/Pigoen/Pigoen/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Pigoen-6B5FA807-3440-4B0A-B769-D5D7B43C778C;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "PigeonDb"
   },
   "Logging": {
     "LogLevel": {
