--- a/Zebra/Zebra/appsettings.json
+++ b/Zebra/Zebra/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "PigeonDb"
+    "DatabaseName": "ZebraDb"
   },
   "Logging": {
     "LogLevel": {
