Added database project

--- a/Zebra/Zebra/Zebra.csproj
+++ b/Zebra/Zebra/Zebra.csproj
@@ -8,11 +8,14 @@
     <RootNamespace>Zebra</RootNamespace>
   </PropertyGroup>
 
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="MongoDB.Driver" Version="2.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Zebra.Database\Zebra.Database.csproj" />
   </ItemGroup>
 
 </Project>
