--- a/Zebra/Zebra/Zebra.csproj
+++ b/Zebra/Zebra/Zebra.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.9.2" />
+    <PackageReference Include="RestEase" Version="1.4.10" />
   </ItemGroup>
 
   <ItemGroup>
