--- a/Zebra/Zebra/Zebra.csproj
+++ b/Zebra/Zebra/Zebra.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Zebra.Database\**" />
+    <Content Remove="Zebra.Database\**" />
+    <EmbeddedResource Remove="Zebra.Database\**" />
+    <None Remove="Zebra.Database\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
@@ -17,7 +24,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Zebra.Database\Zebra.Database.csproj" />
+    <ProjectReference Include="Zebra.Database\Zebra.Database.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="SeedProducts.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
