--- a/Zebra/Zebra/docker-compose.yml
+++ b/Zebra/Zebra/docker-compose.yml
@@ -1,23 +1,19 @@
 version: '3.4'
 
-#networks:
-#  zebra-net:
-#    driver: bridge
-
 services:
- # mongo:
- #   image: 'mongo:4'
- #   volumes:
- #     - './data/mongo:/data/mongo'
- #   networks:
- #     - zebra-net
- #   ports:
- #       - "27017:27017"
+  mongo:
+    image: 'mongo:4'
+    volumes:
+      - './data/mongo:/data/mongo'
+    networks:
+      - shared
+    ports:
+        - "27017:27017"
 
   zebra:
     image: 'zebra:latest'
-    #depends_on:
-    #  - "mongo"
+    depends_on:
+      - "mongo"
     build:
       context: .
       dockerfile: Dockerfile
@@ -26,5 +22,10 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
     ports:
        - "17450:80"  
-   # networks:
-   #    - fafik-net
+    networks:
+      - shared
+
+networks:
+  shared: 
+    external:
+      name: shared
